# Terminal-based-Coding-agent-

./: .gitignore  CHANGELOG.md  CODEBASE_AWARENESS.md  CONTRIBUTING.md  CURSOR_LIKE_FEATURES.md  DEMO_QUICK_REFERENCE.md  ENHANCED_UI.md  LICENSE  QUICKSTART.md  README.md  VIDEO_DEMO_SCRIPT.md  demo.py  demo_agent_capabilities.py  demo_backend.py  demo_codebase_awareness.py  demo_enhanced_ui.py  enhanced_agent.py  env.example  interactive_demo.py  main_agent.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_agent.py  setup.py  test_real_code_generation.py
coding_agent/: __init__.py  cli.py
coding_agent/cli/: __init__.py  enhanced_ui.py  interface.py
coding_agent/context/: __init__.py  codebase_indexer.py  session_manager.py
coding_agent/core/: __init__.py  code_generator.py  intent_parser.py  models.py
coding_agent/execution/: __init__.py  sandbox.py
coding_agent/utils/: file_manager.py  llm_client.py  logger.py
examples/: basic_usage.py
